# hyprland-Settings

./: README.md
Settings/: CMakeLists.txt  keybinds.c  keybinds.h  main.c  waybar_presets.c  waybar_presets.h
